    $dbh->{ora_ph_csform} = SQLCS_NCHAR;
    $sth->bind_param(..., { ora_csform => SQLCS_NCHAR });
    this is still a work-in-progress, help welcome.
  Added $dbh->{ora_parse_error_offset} docs thanks to Andy Hassall.
  Added $dbh->reauthenticate($user,$pass) docs thanks to Andy Hassall.
  Corrected typo in ora_lob_read() example thanks to Johannes Wierny.

=head1 Changes in DBD-Oracle 1.15   27th January 2004

  NOTE: DBD::Oracle now requires DBI version 1.28 (June 2002) or later.

  NOTE: This is probably the last release that will support being
  built with the old Oracle 7 OCI interface.

  NOTE: This release will build for perl 5.5 only after some manual edits
  which are detailed in README.help.  Future releases may not build for 5.5.
  Perl 5.5.3 is very old and and upgrading to at least 5.6.1 is recommended.
  The DBI itself has required perl >= 5.6.0 since DBI 1.38, August 2003.

  Fixed Makefile.PL for HPUX thanks to H.Merijn Brand & Sweth Chandramouli.
  Fixed Makefile.PL for handling 32/64bit libs thanks to Lincoln Baxter,
    Sean Kelly, Joel Van Boeckel and others. Oh the fun we've had.
  Fixed Makefile.PL error typo thanks to Martijn Koster.
  Fixed to build okay for Oracle 8.0.x and for older C compilers.
  Fixed minor omission in t/ph_test.t thanks to Tom Malaher.
  Fixed for extproc_perl (http://search.cpan.org/author/JHORWITZ/extproc_perl/)
  Fixed Oraperl handling of ora_errno and ora_errstr thanks to Martin Busik.
  Fixed PRECISION for "NUMBER" to be 126 not 0 thanks to Steffen Goeldner.
  Fixed bind_param_inout() for placeholders not assigned to in PL/SQL.

  Changed bind_param_inout for CHAR types to no longer use a minimum
    length of 28 characters. Warning: this change may break code that
    doesn't pass bind_param_inout() a length value large enough for the
    returned string. (The minimum length was not documented and should
    not have been relied upon. This change currently only applies to the