@@ -47,6 +47,7 @@ ora_explain.PL
 oraperl.ph	Old oraperl file included for completeness of emulation
 t/01base.t
 t/10general.t
+t/15nls.t
 t/20select.t
 t/21nchar.t
 t/25plsql.t
